--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,65 @@
 **/.*.sw[o,p]
+
+# IDE artifacts #
+#################
+.idea/
+.vscode/
+*sublime*
+
+
+# Python     #
+##############
+*.py[cod]
+__pycache__/
+.cache/
+.mypy_cache/
+*.egg-info/
+env/
+.pytest_cache/
+
+
+# Testing / coverage reports #
+##############################
+reports/
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*-coverage.xml
+
+
+# Distribution / packaging #
+############################
+build/
+dist/
+*.zip
+*.tar.gz
+*.sql.gz
+*.bak
+
+
+# Sphinx documentation #
+########################
+docs/_build/
+
+
+# Jupyter artifacts #
+#####################
+**/.ipynb_checkpoints/**
+
+
+# assorted backups  #
+#####################
+backups/
+tmp/
+db_dumps/*.json
+
+
+# Other stuff       #
+#####################
+*.sqlite3
+.env*
+!.env.example
